--- a/common-code/src/main/resources/application.yaml
+++ b/common-code/src/main/resources/application.yaml
@@ -7,3 +7,6 @@ spring:
     password: root
     username: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: 192.168.0.104
+    port: 6379
